@@ -10,7 +10,7 @@
 #	#3 connecting host name
 #	#4 connecting host IP
 
- /(imapd|ipop3d).+Login (disabled|failed).+host=(.+ )?\[(.+)\]/ t=4; l=1,4,5/1d; c='echo "Repeated #1 login attempts from #3#4"'
+/(imapd|ipop3d).+Login (disabled|failed).+host=(.+ )?\[(.+)\]/ t=4; l=1,4,5/1d; c='echo "Repeated #1 login attempts from #3#4"'
 
 # Alternative version that blocks IP by adding to firewall block list.
 #/(imapd|ipop3d).+Login (disabled|failed).+host=.*\[(.+)\]/ t=4; l=1,3,5/2m; c='pfctl -t deny -T add #3'
